kubernetes/apps/ai/honcho/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: "honcho"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: honcho
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: text-embeddings-inference
      toPorts:
        - ports:
            - port: "8080"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: llama-cpp-reranker
      toPorts:
        - ports:
            - port: "8080"
